src/test/deca/syntax/invalid/lexer/flottants.deca
// Description:
//    test de programme avec flottants
//    lexicalement correct
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 09/01/2023
//

1234
0000